--- a/index.html
+++ b/index.html
@@ -5,9 +5,40 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Landing Page</title>
-    <link type="stylesheet" href="./styling/landing-css.css">
+    <link rel="stylesheet" href="./styling/landing-css.css">
 </head>
 <body>
-    
+    <div class="container-1">
+        <div class="logo">
+            <div class="header-logo">Header logo</div>
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
+        <div class="sign-up">
+            <div class="main-text">This website is awesome!</div>
+            <div class="text">This website subtext!</div>
+            <button class="btn">Sign up!</button>
+        </div>
+        <div class="placeholder-img">Image placeholder</div>
+    </div>
+    <div class="information"></div>
+        <div class="main-text">Some random information</div>
+        <div class="images">
+            <div class="card">Card 1</div>
+            <div class="card">Card 2</div>
+            <div class="card">Card 3</div>
+            <div class="card">Card 4</div>
+        </div>
+    <div class="quote">
+        <div>This is a quote from a person, very cool, very legal!</div>
+        <div>-Quote guy, Quotable</div>
+    </div>
+    <div class="container">
+        <div class="stuff">Call to action!</div>
+    </div>
+    <div class="footer">Copyright &copy; Chip Stepowski 2023</div>
 </body>
 </html>
