Added some styling in the first section

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             </ul>
         </div>
         <div class="sign-up">
-            <div class="main-text">This website is awesome!</div>
-            <div class="text">This website subtext!</div>
-            <button class="btn">Sign up!</button>
+            <div class="content">
+                <div class="main-text">This website is awesome!</div>
+                <div class="text">This website subtext!</div>
+                <button class="btn">Sign up!</button>
+            </div>
+            <div class="placeholder-img">Image placeholder</div>
         </div>
-        <div class="placeholder-img">Image placeholder</div>
     </div>
     <div class="information"></div>
         <div class="main-text">Some random information</div>
