--- a/index.html
+++ b/index.html
@@ -12,34 +12,48 @@
         <div class="logo">
             <div class="header-logo">Header logo</div>
             <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Information</a></li>
+                <li><a href="#">Goal</a></li>
             </ul>
         </div>
         <div class="sign-up">
             <div class="content">
-                <div class="main-text">This website is awesome!</div>
-                <div class="text">This website subtext!</div>
+                <div class="hero-main">Welcome to Appalachian Travels!</div>
+                <div class="hero-secondary">Appalachian Travels is the premier hiking company for Appalachian hiking. We are located in the Blue Ridge mountains in the Souther Appalachian mountain range.</div>
                 <button class="btn">Sign up!</button>
             </div>
             <div class="placeholder-img">Image placeholder</div>
         </div>
     </div>
     <div class="information"></div>
-        <div class="main-text">Some random information</div>
+        <div class="info-main">Some random information</div>
         <div class="images">
-            <div class="card">Card 1</div>
-            <div class="card">Card 2</div>
-            <div class="card">Card 3</div>
-            <div class="card">Card 4</div>
+            <div class="card">
+                <img>
+                <p>Subtext</p>
+            </div>
+            <div class="card">
+                <img>
+                <p>Subtext</p>
+            </div>
+            <div class="card">
+                <img>
+                <p>Subtext</p>
+            </div>
+            <div class="card">
+                <img>
+                <p>Subtext</p>
+            </div>
         </div>
     <div class="quote">
         <div>This is a quote from a person, very cool, very legal!</div>
         <div>-Quote guy, Quotable</div>
     </div>
     <div class="container">
-        <div class="stuff">Call to action!</div>
+        <div class="stuff">Call to action!
+            <button>Sign up!</button>
+        </div>
     </div>
     <div class="footer">Copyright &copy; Chip Stepowski 2023</div>
 </body>
