More styling and html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Landing Page</title>
+    <title>Appalachian Hiking Co.</title>
     <link rel="stylesheet" href="./styling/landing-css.css">
 </head>
 <body>
@@ -19,11 +19,12 @@
         </div>
         <div class="sign-up">
             <div class="content">
-                <div class="hero-main">Welcome to Appalachian Travels!</div>
-                <div class="hero-secondary">Appalachian Travels is the premier hiking company for Appalachian hiking. We are located in the Blue Ridge mountains in the Souther Appalachian mountain range.</div>
+                <div class="hero-main">Welcome to The Appalachian Hiking Company!</div>
+                <div class="hero-secondary">The Appalachian Hiking Company is the premier hiking company for Appalachian hiking. We are located in the Blue Ridge mountains in the Southern Appalachian mountain range.
+                </div>
                 <button class="btn">Sign up!</button>
             </div>
-            <div class="placeholder-img">Image placeholder</div>
+            <div class="placeholder-img"><img src="./images/elijah-mears-nW3N78niwss-unsplash.jpg"></div>
         </div>
     </div>
     <div class="information"></div>
