--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 <body>
     <div class="container-1">
         <div class="logo">
-            <div class="header-logo">Header logo</div>
+            <div class="header-logo">Header Logo</div>
             <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Information</a></li>
-                <li><a href="#">Goal</a></li>
+                <li><a href="#">Book a hike</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Store</a></li>
             </ul>
         </div>
         <div class="sign-up">
@@ -53,7 +53,7 @@
     </div>
     <div class="container">
         <div class="stuff">Call to action!
-            <button>Sign up!</button>
+            <button class="btn">Sign up!</button>
         </div>
     </div>
     <div class="footer">Copyright &copy; Chip Stepowski 2023</div>
