Added new images to second section

--- a/index.html
+++ b/index.html
@@ -28,22 +28,22 @@
         </div>
     </div>
     <div class="information"></div>
-        <div class="info-main">Some random information</div>
+        <div class="info-main">Come explore nature with us!</div>
         <div class="images">
             <div class="card">
-                <img>
+                <img src="./images/abigail-ducote-n8d0cTcm2hU-unsplash.jpg">
                 <p>Subtext</p>
             </div>
             <div class="card">
-                <img>
+                <img src="./images/abigail-ducote-q8Eoo-vS-fY-unsplash.jpg">
                 <p>Subtext</p>
             </div>
             <div class="card">
-                <img>
+                <img src="./images/isaac-wendland-hwKOKClLnHQ-unsplash.jpg">
                 <p>Subtext</p>
             </div>
             <div class="card">
-                <img>
+                <img src="./images/kirk-thornton-ZXwjii7h5lI-unsplash.jpg">
                 <p>Subtext</p>
             </div>
         </div>
