--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
         <div class="images">
             <div class="card">
                 <img src="./images/abigail-ducote-n8d0cTcm2hU-unsplash.jpg">
-                <p>Subtext</p>
+                <p>No gear? No problem! We provide everything you'll need for a successful hike.</p>
             </div>
             <div class="card">
                 <img src="./images/gary-yost-XbI88fNPZJE-unsplash.jpg">
-                <p>Subtext</p>
+                <p>From easy to hard, we will make sure we find the right trail for you!</p>
             </div>
             <div class="card">
                 <img src="./images/isaac-wendland-hwKOKClLnHQ-unsplash.jpg">
-                <p>Subtext</p>
+                <p>Want to see the beautiful fall foliage? We have trails for every season.</p>
             </div>
             <div class="card">
                 <img src="./images/kirk-thornton-ZXwjii7h5lI-unsplash.jpg">
-                <p>Subtext</p>
+                <p>Our experienced guides will help you explore the wonderul trails of the Appalachian Mountains.</p>
             </div>
         </div>
     <div class="quote">
