Updated styling on quote section

--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
             </div>
         </div>
     <div class="quote">
-        <div>This is a quote from a person, very cool, very legal!</div>
-        <div>-Quote guy, Quotable</div>
+        <div>I was never been much of a hiker previously, but going on a moderate intensity trail with AHC has made me a convert!</div>
+        <div>-Steve Davies, Converted Hiker</div>
     </div>
     <div class="container">
-        <div class="stuff">Call to action!
+        <div class="call-to-action">Call to action!
             <button class="btn">Sign up!</button>
         </div>
     </div>
