Created two classes for quote section

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             </div>
         </div>
     <div class="quote">
-        <div>I was never been much of a hiker previously, but going on a moderate intensity trail with AHC has made me a convert!</div>
-        <div>-Steve Davies, Converted Hiker</div>
+        <div class="quote-text">I was never been much of a hiker previously, but going on a moderate intensity trail with AHC has made me a convert!</div>
+        <div class="quote-person">-Steve Davies, Converted Hiker</div>
     </div>
     <div class="container">
         <div class="call-to-action">Call to action!
