--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="sign-up">
             <div class="content">
                 <div class="hero-main">Welcome to The Appalachian Hiking Company!</div>
-                <div class="hero-secondary">The Appalachian Hiking Company is the premier hiking company for Appalachian hiking. We are located in the Blue Ridge mountains in the Southern Appalachian mountain range.
+                <div class="hero-secondary">The Appalachian Hiking Company is the premier hiking company for Appalachian hiking. We are located in the Blue Ridge mountains, part of the Southern Appalachian mountain range.
                 </div>
-                <button class="btn">Sign up!</button>
+                <button>Sign up!</button>
             </div>
             <div class="placeholder-img"><img src="./images/elijah-mears-nW3N78niwss-unsplash.jpg"></div>
         </div>
@@ -44,15 +44,18 @@
             </div>
             <div class="card">
                 <img src="./images/kirk-thornton-ZXwjii7h5lI-unsplash.jpg">
-                <p>Our experienced guides will help you explore the wonderul trails of the Appalachian Mountains.</p>
+                <p>Our experienced guides are here to help you discover nature.</p>
             </div>
         </div>
     <div class="quote">
         <div class="quote-text">I was never been much of a hiker previously, but going on a moderate intensity trail with AHC has made me a convert!</div>
         <div class="quote-person">-Steve Davies, Converted Hiker</div>
     </div>
-    <div class="container">
-        <div class="call-to-action">Call to action!
+    <div class="container-2">
+        <div class="call-to-action">
+            <div class="cta-main-text">Call to action!
+                <div class="cta-secondary-text">Sign up for our newsletter on the latest hikes!</div>
+            </div>
             <button class="btn">Sign up!</button>
         </div>
     </div>
