Fixed call to action box size

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     <div class="quote">
         <div class="quote-text">I was never been much of a hiker previously, but going on a moderate intensity trail with AHC has made me a convert!</div>
-        <div class="quote-person">-Steve Davies, Converted Hiker</div>
+        <div class="quote-person">-Steve Davies, converted hiker</div>
     </div>
     <div class="container-2">
         <div class="call-to-action">
