--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Appalachian Hiking Co.</title>
     <link rel="stylesheet" href="./styling/landing-css.css">
+    <script src="https://kit.fontawesome.com/af8d5f65f1.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container-1">
         <div class="logo">
-            <div class="header-logo">Header Logo</div>
+            <div class="header-logo"><i class="fa-solid fa-mountain-sun fa-2x"></i></div>
             <ul>
                 <li><a href="#">Book a hike</a></li>
                 <li><a href="#">About Us</a></li>
@@ -53,8 +54,8 @@
     </div>
     <div class="container-2">
         <div class="call-to-action">
-            <div class="cta-main-text">Call to action!
-                <div class="cta-secondary-text">Sign up for our newsletter on the latest hikes!</div>
+            <div class="cta-main-text">The mountains are calling!
+                <div class="cta-secondary-text">Keep up to date by signing up for our newsletter!</div>
             </div>
             <button class="btn">Sign up!</button>
         </div>
